# poll_bot

./: .envrc  .gitignore  Makefile  README.md  local.yml  pyproject.toml
.envs/.local/: .poll_bot
.envs/.production.example/: .poll_bot
compose/local/: Dockerfile  start_admin  start_bot
compose/production/: entrypoint
requirements/: local.txt  production.txt
src/: admin.py  alembic.ini  app.py  poll_bot.db  run_admin.py
src/alembic/: env.py
src/alembic/versions/: 0841cec4f927_added_is_terminated.py  39be4a35f501_initial.py  e574433d51f5_initial.py
src/core/: config.py
src/db/: database.py  managers.py  models.py
src/polls/: enums.py  managers.py  models.py  pet_advisor.py  utils.py
src/tests/: pet_advisor.py  test_pet_advisor.py
